# url-shortener

./: .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  .ignore  .prettierignore  Cargo.toml  README.md  Shuttle.toml  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  tomlfmt.toml  tsconfig.json  turbo.json
.github/workflows/: playwright-svelte.yml  playwright.yml
apps/cli/: .env.example  Cargo.toml  README.md
apps/cli/src/: api.rs  config.rs  loading_animator.rs  main.rs
apps/docs/: next.config.mjs  package.json
apps/server/: package.json
apps/server-actix/: .env.example  .gitignore  Cargo.toml  Secrets.dev.toml  justfile  package.json  schema.sql
apps/server-actix/migrations/: 20230709224254_initial.down.sql  20230709224254_initial.up.sql
apps/server-actix/src/: auth.rs  config.rs  db.rs  main.rs  middleware.rs  services.rs
apps/server-actix/src/config/: auth.rs
apps/server-actix/src/db/: auth.rs  url.rs
apps/server-actix/src/services/: api.rs  yew.rs
apps/server-actix/src/services/api/: auth.rs  url.rs
apps/server/src/: main.rs
apps/web/: package.json
apps/web-nextjs/: .env.example  .eslintrc.cjs  README.md  next.config.mjs  package.json  tailwind.config.cjs  tsconfig.json
apps/web-nextjs/src/: env.mjs
apps/web-nextjs/src/app/: layout.tsx  page.tsx  providers.tsx  status-display.tsx
apps/web-nextjs/src/app/[id]/: layout.tsx  loading.tsx
apps/web-nextjs/src/app/[id]/(redirect)/: page.tsx
apps/web-nextjs/src/app/[id]/stats/: page.tsx
apps/web-nextjs/src/app/error/: page.tsx
apps/web-nextjs/src/app/login/: page.tsx  who-am-i.tsx
apps/web-nextjs/src/app/previous/: page.tsx
apps/web-nextjs/src/app/register/: page.tsx
apps/web-solid-start/: .env.example  README.md  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
apps/web-solid-start/src/: root.tsx
apps/web-solid-start/src/components/: status-display.tsx  who-am-i.tsx
apps/web-solid-start/src/env/: client.ts  schema.ts  server.ts
apps/web-solid-start/src/routes/: (home).tsx  [...404].tsx  [id].tsx  default.tsx  error.tsx  login.tsx  register.tsx
apps/web-solid-start/src/routes/[id]/: (redirect).tsx  error.tsx  stats.tsx
apps/web-solid-start/src/styles/: globals.css
apps/web-svelte-kit/: .env.example  .gitignore  README.md  package.json  playwright.config.ts  prettier.config.cjs  tailwind.config.cjs
apps/web-svelte-kit/.github/workflows/: playwright.yml
apps/web-svelte-kit/src/: app.postcss
apps/web-svelte-kit/src/lib/components/: TailwindIndicator.svelte  index.ts
apps/web-svelte-kit/src/routes/: +layout.svelte  +page.svelte
apps/web-svelte-kit/src/routes/[id]/(redirect)/: +page.ts
apps/web-svelte-kit/src/routes/[id]/stats/: +page.svelte  +page.ts
apps/web-svelte-kit/src/routes/default/: Header.svelte
apps/web-svelte-kit/src/routes/default/about/: +page.svelte
apps/web-svelte-kit/src/routes/error/: +page.svelte
apps/web-svelte-kit/src/routes/login/: +page.svelte  WhoAmI.svelte
apps/web-svelte-kit/src/routes/register/: +page.svelte
apps/web-svelte-kit/tests/: home.test.ts  test.ts
apps/web-yew/: .gitignore  Cargo.toml  Trunk.toml  index.html  input.css  package.json  tailwind.config.cjs
apps/web-yew/src/: api.rs  app.rs  components.rs  hooks.rs  lib.rs  main.rs  routes.rs
apps/web-yew/src/api/: auth.rs  url.rs
apps/web-yew/src/components/: lucide_icon.rs  status.rs  status_display.rs  whoami.rs
apps/web-yew/src/hooks/: use_error_redirector.rs  use_mutation.rs  use_query.rs
apps/web-yew/src/routes/: error.rs  home.rs  login.rs  not_found.rs  redirect.rs  register.rs  stats.rs
apps/web-yew/tests/: common.rs  use_query.rs
crates/common/: Cargo.toml  package.json
crates/common/src/: error.rs  types.rs
crates/yew-query/: Cargo.toml  package.json
crates/yew-query/src/: lib.rs  use_mutation.rs  use_query.rs
crates/yew-query/tests/: common.rs  use_mutation.rs  use_query.rs
