[package]
name = "url-shortener-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.16", features = ["derive"] }
colored = "2.0.4"
common = { package = "url-shortener-common", path = "../../crates/common" }
crossterm = "0.26.1"
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.174"
serde_json = "1.0.103"
thiserror = "1.0.44"
tokio = "1.29.1"
