[package]
name = "url-shortener-server-actix"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { package = "url-shortener-common", path = "../../crates/common" }
shuttle-runtime = "0.18.0"
actix-web = "4.3.1"
shuttle-actix-web = "0.18.0"
tokio = "1.28.2"
nanoid = "0.4.0"
actix-cors = "0.6.4"
log = "0.4.18"
url = "2.4.0"
derive_more = "0.99.17"
serde_json = "1.0.96"
