[package]
name = "url-shortener-server-actix"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.3.1"
common = { package = "url-shortener-common", path = "../../crates/common" }
derive_more = "0.99.17"
log = "0.4.18"
nanoid = "0.4.0"
serde_json = "1.0.96"
shuttle-actix-web = "0.19.0"
shuttle-runtime = "0.19.0"
shuttle-shared-db = { version = "0.19.0", features = ["postgres", "sqlx"] }
shuttle-static-folder = "0.19.0"
sqlx = { version = "0.6.3", features = ["offline", "postgres", "runtime-tokio-native-tls", "chrono"] }
tokio = "1.28.2"
url = "2.4.0"
