[package]
name = "url-shortener-server-actix"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-identity = "0.5.2"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = "4.3.1"
argon2 = "0.5.1"
common = { package = "url-shortener-common", path = "../../crates/common" }
log = "0.4.19"
nanoid = "0.4.0"
serde_json = "1.0.104"
shuttle-actix-web = "0.22.0"
shuttle-runtime = "0.22.0"
shuttle-secrets = "0.22.0"
shuttle-shared-db = { version = "0.22.0", features = ["postgres", "sqlx"] }
shuttle-static-folder = "0.22.0"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
tokio = "1.29.1"
url = "2.4.0"
