[package]
name = "url-shortener-web-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { package = "url-shortener-common", path = "../../crates/common" }
gloo-console = "0.2.3"
gloo-net = "0.2.6"
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.36"
web-sys = { version = "0.3.63", features = ["FormData", "HtmlFormElement"]}
yew = { version = "0.20.0", features = ["csr"] }
