[package]
name = "yew-query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen-futures = "0.4.37"
yew = { version = "0.20.0", features = ["csr"] }

[dev-dependencies]
gloo = "0.9.0"
wasm-bindgen-test = "0.3.37"
web-sys = "0.3.64"
